--- a/resources/css/framework/icons.styl
+++ b/resources/css/framework/icons.styl
@@ -1,7 +1,7 @@
 @font-face
   font-family: "icons"
-  src: url('../fonts/icons.eot?v=1561727766588')
-  src: url('../fonts/icons.eot?v=1561727766588?#iefix') format('eot'), url('../fonts/icons.woff?v=1561727766588') format('woff'), url('../fonts/icons.ttf?v=1561727766588') format('truetype')
+  src: url('../fonts/icons.eot?v=1561902028239')
+  src: url('../fonts/icons.eot?v=1561902028239?#iefix') format('eot'), url('../fonts/icons.woff?v=1561902028239') format('woff'), url('../fonts/icons.ttf?v=1561902028239') format('truetype')
   font-weight: 400
   font-style: normal
 
